--- a/gb/23/2/25/n13937819.md
+++ b/gb/23/2/25/n13937819.md
@@ -2,7 +2,7 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>创造被动收入 5美元也能投资房地产？</h2>
-<a href="https://dvucua6a0b85v.cloudfront.net/I0lXRvkbl"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d1dy14m1lbgtrj.cloudfront.net/Z1vXRvkba"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>房地产众筹（Real Estate Crowdfunding）投资帮助资金有限的人也能投资房地产。（Shutterstock）
 </h6>
 <hr>
@@ -48,7 +48,7 @@
 <h2>最适合初学者的平台</h2>
 <p>另外，也有最适合初学者的平台：就是我们刚刚说到的Fundrise，最低门槛只有10美元，并且不限合格投资者，还能随时取回资金，但是可能衍生相关费用。Fundrise提供五种等级的投资账号，从入门到优质等级，每个级别都有最低投资额，和不同的投资策略和潜在回报。从2017年至2022年的年回报率介于1.50%至22.99%之间。截至2023年1月，Fundrise代表超过387,000名个人投资者，管理价值40亿美元的房地产，并把超过2.24亿美元的资金，分配给众多投资者。</p>
 <p><span style="color: #0000ff;">YouTube：想创造被动收入 你该了解房地产众筹投资｜听说众筹投资只要5块钱？｜房地产众筹投资有什么优缺点｜众筹投资和REIT有何不同｜适合什么人？【<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E5%9C%B0%E4%BA%A7.md#1">美国地产</a>热点】第105集</span><br />
-<a title="YouTube video player" src=""></a><a href="https://dvucua6a0b85v.cloudfront.net/I0lXRvkbl"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/Ua_Y8gItjfs" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<a title="YouTube video player" src=""></a><a href="https://d1dy14m1lbgtrj.cloudfront.net/Z1vXRvkba"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/Ua_Y8gItjfs" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
 <h2>最适合投资贷款的平台</h2>
 <p>还有最适合投资贷款的平台：PeerStreet，不过可能由于近期抵押贷款利率很高，申请贷款的人数锐减，导致PeerStreet今年一月出现裁员，但裁员数目不详，这是大家要留意的部分。但是PeerStreet的最低投资金额也不高，只有1000美元。PeerStreet比较特别，它只有提供债务投资，可以为市场上的买家提供融资，然后让投资人赚取利息。截至2022年，它为投资者分配超过2.8亿美元的资金，其精选投资的平均年回报率在6%至9%之间。</p>
 <h2>最佳房地产产品研究的平台</h2>
@@ -70,31 +70,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/20/n9870365.md#1" target="_blank">林辉：文革第一禁书作者曾被内定死刑</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/24/n11405877.md#1" target="_blank">组图：反迫害20年 澳纽法轮功呼唤正义良知</a></li><hr>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/26/n10743859.md#1" target="_blank">古玉文：公私合营献产业 武百祥命陨红朝</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/2/n10610921.md#1" target="_blank">8岁自闭儿奇迹“开心锁” 变身最快乐男孩</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945330.md#1">【未解之谜】罕见天象昭示红朝命数？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944080.md#1">一代圣主康熙皇帝至孝之至 数十年如一日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945916.md#1">电视人患忧郁症陷绝境 因一本奇书改变命运</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947696.md#1">【未解之谜】邮票上的预言</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/5/n13943724.md#1">妙不可言的舞剧《草船借箭》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13949970.md#1">【全球新闻】硅谷银行倒闭 拜登急安抚 确保储户安全</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950265.md#1">【军事热点】俄军陷停滞 内讧和失控笼罩莫斯科</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949582.md#1">【百年真相】一个气球 暴露中共致命问题</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945412.md#1">组图：最安全的十款SUV 碰撞测试评级最高</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13948884.md#1">【翻墙必看】分析：谁投了李强的反对票</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13948868.md#1">范冰冰现身奥斯卡红毯 获赞“一出场就赢了”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13948868.md#1">范冰冰现身奥斯卡红毯 获赞“一出场就赢了”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948769.md#1">梁朝伟亚洲电影大奖封帝 刘嘉玲打开名单惊呆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949642.md#1">赵薇遭封杀一年半 47岁生日自拍照显憔悴</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948798.md#1">“什么戏都想演” 洪金宝叹演动作片难糊口</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13948969.md#1">奥斯卡获奖名单揭晓 杨紫琼成首位亚裔影后</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945412.md#1">组图：最安全的十款SUV 碰撞测试评级最高</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949469.md#1">2月份美国房市 拐点出现！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948420.md#1">退休的最大挑战是什么？哈佛85年研究释疑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945694.md#1">保持大脑敏锐 胡萝卜不可忽视的6大健康益处</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/5/n13943660.md#1">干细胞模型揭示青光眼治疗的秘密</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962992.md#1">【车评】橙黄之色 2023 Toyota Tacoma TRD Pro</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963361.md#1">【时事金扫描】川普被起诉牵涉大 解读混乱局势</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962933.md#1">分析：养儿防老被中共破坏 老人何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/25/n13937819.htm">创造被动收入 5美元也能投资房地产？</a></p><hr>
