--- a/gb/22/12/26/n13892254.md
+++ b/gb/22/12/26/n13892254.md
@@ -28,38 +28,38 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/22/n13889352.md#1">加拿大利率攀升 房贷违约增加</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/22/n13890028.md#1">登陆加拿大前免费安置服务- NEXT STOP CANADA</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/22/n13890049.md#1">美国考虑禁抖音 加拿大仍未行动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936709.md#1">加财长就银行创办人与中共联系 发安全警告</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936792.md#1">去年12月加拿大空缺职位近85万</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936755.md#1">Loblaw面临过千供应商提价要求压力</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963976.md#1">碳价跃升至每吨65元 碳税退税更多 加油更贵</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963966.md#1">针对商家随意收费 加拿大食品杂货法将出台</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962869.md#1">调查：应对大规模枪击案 骑警需重大改革</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/7/n11437710.md#1" target="_blank">林辉：国民党撤至台湾后破获的中共渗透大案</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/22/n11273218.md#1" target="_blank">用实际行动赎罪 派出所所长胃癌痊愈</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/4/n11566782.md#1" target="_blank">凌晓辉：当代人类的天书（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/10/21/n4555095.md#1" target="_blank">这条命是法轮功给的</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/22/n13935896.md#1">李强入常难风光 将成中共最弱总理</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/19/n13933053.md#1">情缘未了 美高中生车祸身亡转生女友儿子</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/18/n13932359.md#1">【未解之谜】来自星星的孩子（2）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927607.md#1">天的谴告 人的机会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921611.md#1">红楼欲坠话红楼：曹雪芹与法国现代作家普鲁斯特 思想意识“惊人相似”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/24/n13937600.md#1">【菁英论坛】中共版克格勃上线 国务院大削权</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936676.md#1">【菁英论坛】机构改革重洗牌 习更深恐惧在墙内</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/24/n13937217.md#1">【全球新闻】俄乌战争一周年 中共冒充和平使者</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936222.md#1">李克强罕称权力来自人民 分析：最后的呼喊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/22/n13935889.md#1">中共首次公布全国有近6亿栋房屋 舆论震惊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13935981.md#1">韦伯望远镜发现巨大星系 颠覆人类对宇宙认知</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/22/n13935009.md#1">时隔16年再相聚 刘荷娜晒与林志颖合照获赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/22/n13935855.md#1">白纸运动遭秋后算账 27岁男星周峻纬微博被禁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13935998.md#1">“刘三姐”黄婉秋病危昏迷 最后绝笔信曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936794.md#1">歌手李玟透露“一辈子最大恐惧” 自曝身体缺陷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/22/n13935910.md#1">退出演艺圈多年 黎姿自曝复出拍戏等3人同意</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13930478.md#1">吃马铃薯会得糖尿病？研究这样说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/16/n13930856.md#1">血液循环好 子宫也会很健康 改善血瘀这样吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13930473.md#1">50岁前退休不是梦 8个务实的作法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936303.md#1">冷冻干燥鸡蛋粉末怎么吃才安全？ 专家释疑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936555.md#1">晚上睡不着怎么办？心理师推荐改善方法</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962992.md#1">【车评】橙黄之色 2023 Toyota Tacoma TRD Pro</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963361.md#1">【时事金扫描】川普被起诉牵涉大 解读混乱局势</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962933.md#1">分析：养儿防老被中共破坏 老人何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/12/26/n13892254.htm">加拿大慈善捐赠税惠知多少？</a></p><hr>
